Paginate search property page

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="navbar-nav navbar-nav-scroll mx-lg-auto gap-1 gap-lg-5 px-2">
                 <li class="nav-item"><a class="nav-link px-4 {#if map.page is 'home'}active{/if}" href="/" style="border-radius: 4px;">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link px-4 {#if map.page is 'properties'}active{/if}" href="/property/search"
+                <li class="nav-item"><a class="nav-link px-4 {#if map.page is 'property'}active{/if}" href="/property/search"
                         style="border-radius: 4px;">Propiedades</a></li>
                 <li class="nav-item"><a class="nav-link px-4 {#if map.page is 'about'}active{/if}" href="/about"
                         style="border-radius: 4px;">Nosotros</a></li>
