--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -31,7 +31,7 @@
                     <div class="container-fluid">
                         <ul class="navbar-nav w-100">
                             <li class="nav-item"><a class="nav-link {#if map.page is 'home'}active{/if}" href="/">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link {#if map.page is 'properties'}active{/if}" href="/property/search">Propiedades</a></li>
+                            <li class="nav-item"><a class="nav-link {#if map.page is 'property'}active{/if}" href="/property/search">Propiedades</a></li>
                             <li class="nav-item"><a class="nav-link {#if map.page is 'about'}active{/if}" href="/about">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link {#if map.page is 'contact'}active{/if}" href="/contact">Contacto</a></li>
                         </ul>
