--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -7,19 +7,15 @@
     <title>Romsal, SRL</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
     <link rel="stylesheet" href="/assets/css/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
     <link rel="stylesheet" href="/assets/css/generic/general.css?h=a7957f698ea1f4e9b33d41f9c0b2e442">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=ABeeZee&amp;display=swap">
     <link rel="stylesheet" href="/assets/css/property/info.css?h=87d94c8e4f30c6ed815dcce2bcbe6954">
 </head>
 
 <body>
-    <header></header>
+    <header>{#include navbar/}</header>
     <main>
         <div class="modal fade" role="dialog" tabindex="-1" id="modality">
             <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
@@ -76,68 +72,79 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row row-cols-1 row-cols-md-2 my-4">
-                <div class="col">
-                    <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active" data-bs-target="#modality" data-bs-toggle="modal"><img class="w-100 d-block img-slide" src="https://www.rocketmortgage.com/resources-cmsassets/RocketMortgage.com/Article_Images/Large_Images/TypesOfHomes/types-of-homes-hero.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item" data-bs-target="#modality" data-bs-toggle="modal"><img class="w-100 d-block img-slide" src="https://static.dezeen.com/uploads/2020/02/house-in-the-landscape-niko-arcjitect-architecture-residential-russia-houses-khurtin_dezeen_2364_hero.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item" data-bs-target="#modality" data-bs-toggle="modal"><img class="w-100 d-block img-slide" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+        <section class="bg-dark">
+            <div class="container-md p-0 py-md-5">
+                <div class="row row-cols-1 row-cols-md-2 mb-4">
+                    <div class="col">
+                        <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active" data-bs-target="#modality" data-bs-toggle="modal"><img class="w-100 d-block img-slide" src="https://www.rocketmortgage.com/resources-cmsassets/RocketMortgage.com/Article_Images/Large_Images/TypesOfHomes/types-of-homes-hero.jpg" alt="Slide Image"></div>
+                                <div class="carousel-item" data-bs-target="#modality" data-bs-toggle="modal"><img class="w-100 d-block img-slide" src="https://static.dezeen.com/uploads/2020/02/house-in-the-landscape-niko-arcjitect-architecture-residential-russia-houses-khurtin_dezeen_2364_hero.jpg" alt="Slide Image"></div>
+                                <div class="carousel-item" data-bs-target="#modality" data-bs-toggle="modal"><img class="w-100 d-block img-slide" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                            </div>
+                            <div>
+                                <!-- Start: Previous --><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><!-- End: Previous -->
+                                <!-- Start: Next --><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a><!-- End: Next -->
+                            </div>
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
+                            </ol>
                         </div>
-                        <div>
-                            <!-- Start: Previous --><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><!-- End: Previous -->
-                            <!-- Start: Next --><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a><!-- End: Next -->
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h4 class="text-break d-flex card-title">{map.property.name}<i class="fas fa-star ms-auto ps-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="left" style="color: var(--bs-primary);" title="Destacada"></i></h4>
+                                <h6 class="d-flex align-items-center card-subtitle mb-2"><i class="material-icons m-1">location_on</i>{map.property.address}</h6>
+                                <ul class="list-group list-group-horizontal text-truncate bg-white d-flex">
+                                    {#for thing in map.property.attributes}
+                                    <li class="list-group-item border-0 p-2">
+                                        {#if thing.attribute.type.name is 'ROOM'}
+                                        <span><i class="fas fa-bed p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Habitaciones"></i>{thing.amount}</span>
+                                        {#else if thing.attribute.type.name is 'BATH'}
+                                        <span><i class="fas fa-bath p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Baños"></i>{thing.amount}</span>
+                                        {#else if thing.attribute.type.name is 'PARKING'}
+                                        <span><i class="fas fa-car-alt p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Parqueos"></i>{thing.amount}</span>
+                                        {#else if thing.attribute.type.name is 'AREA'}
+                                        <span><i class="fas fa-ruler-combined p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Área"></i>{thing.amount} m²</span>
+                                        {/if}
+                                    </li>
+                                    {/for}
+                                </ul>
+                                <p>{map.property.description}</p>
+                            </div>
+                            <div class="card-footer d-flex">
+                                <h2 class="my-auto">USD${map.property.price}</h2>
+                            </div>
                         </div>
-                        <ol class="carousel-indicators">
-                            <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
-                            <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
-                            <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
-                        </ol>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h4 class="text-break d-flex card-title">Nombre<i class="fas fa-star ms-auto ps-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="left" style="color: var(--bs-primary);" title="Destacada"></i></h4>
-                            <h6 class="d-flex align-items-center card-subtitle mb-2"><i class="material-icons m-1">location_on</i>Ciudad</h6>
-                            <ul class="list-group list-group-horizontal text-truncate bg-white d-flex">
-                                <li class="list-group-item border-0 p-2"><span><i class="fas fa-bed p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Habitaciones"></i>1</span></li>
-                                <li class="list-group-item border-0 p-2"><span><i class="fas fa-bath p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Baños"></i>1</span></li>
-                                <li class="list-group-item border-0 p-2"><span><i class="fas fa-car-alt p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Parqueos"></i>1</span></li>
-                                <li class="list-group-item border-0 p-2"><span><i class="fas fa-ruler-combined p-2" data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="bottom" title="Área"></i>1 m²</span></li>
-                            </ul>
-                            <p>Descripción</p>
-                        </div>
-                        <div class="card-footer d-flex">
-                            <h2 class="my-auto">US$1</h2>
-                        </div>
+                <div class="row d-none d-md-flex">
+                    <div class="col-2">
+                        <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://q4g9y5a8.rocketcdn.me/wp-content/uploads/2020/02/home-banner-2020-02-min.jpg"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://www.rocketmortgage.com/resources-cmsassets/RocketMortgage.com/Article_Images/Large_Images/TypesOfHomes/types-of-homes-hero.jpg"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/suburban-house-royalty-free-image-1584972559.jpg?crop=1.00xw:0.752xh;0,0.120xh&amp;resize=1200:*"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F1026205392%2F0x0.jpg"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://cdn.vox-cdn.com/thumbor/6itLJS9BZ-B5gXPjM1AB_z-ZKVI=/0x0:3000x2000/1200x800/filters:focal(1260x760:1740x1240)/cdn.vox-cdn.com/uploads/chorus_image/image/65890203/iStock_1067331614.7.jpg"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://plantationhomes.com.au/cms_uploads/images/15861_six-stages-of-building-a-home.jpg"></div>
                     </div>
                 </div>
             </div>
-            <div class="row d-none d-md-flex my-4">
-                <div class="col-2">
-                    <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://q4g9y5a8.rocketcdn.me/wp-content/uploads/2020/02/home-banner-2020-02-min.jpg"></div>
-                </div>
-                <div class="col-2">
-                    <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://www.rocketmortgage.com/resources-cmsassets/RocketMortgage.com/Article_Images/Large_Images/TypesOfHomes/types-of-homes-hero.jpg"></div>
-                </div>
-                <div class="col-2">
-                    <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/suburban-house-royalty-free-image-1584972559.jpg?crop=1.00xw:0.752xh;0,0.120xh&amp;resize=1200:*"></div>
-                </div>
-                <div class="col-2">
-                    <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F1026205392%2F0x0.jpg"></div>
-                </div>
-                <div class="col-2">
-                    <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://cdn.vox-cdn.com/thumbor/6itLJS9BZ-B5gXPjM1AB_z-ZKVI=/0x0:3000x2000/1200x800/filters:focal(1260x760:1740x1240)/cdn.vox-cdn.com/uploads/chorus_image/image/65890203/iStock_1067331614.7.jpg"></div>
-                </div>
-                <div class="col-2">
-                    <div class="card thumbnail h-100"><img class="img-fluid card-img-top w-100 d-block h-100 img-thumbnail" src="https://plantationhomes.com.au/cms_uploads/images/15861_six-stages-of-building-a-home.jpg"></div>
-                </div>
-            </div>
-        </div><!-- Start: Sidebar -->
+        </section><!-- Start: Sidebar -->
         <div class="container">
-            <div class="row my-4">
+            <div class="row my-5">
                 <div class="col-lg-8">
                     <div class="mb-4">
                         <h4 class="section-title">Características</h4>
@@ -149,7 +156,7 @@
                     <div class="mb-4">
                         <h4 class="section-title">Resumen</h4>
                         <hr>
-                        <p>. . .</p>
+                        <p>{map.property.summary}</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -184,10 +191,9 @@
         </div><!-- End: Sidebar -->
         <div id="map" class="w-100" style="height: 400px;"></div>
     </main>
-    <footer></footer>
+    <footer>{#include footer/}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="/assets/js/bs-init.js?h=f85385df9bc7fca4241bc1dbf53b9d61"></script>
     <script src="/assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
     <script src="/assets/js/info.js?h=50f4cf3deb7f510101cb27886af25ddb"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmO0JHOHAXY2C3Ud49KbMSwFf3APep1Ow&amp;region=DO&amp;language=es&amp;callback=initMap"></script>
