--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -158,7 +158,7 @@
                     <div class="mb-4">
                         <h4 class="section-title">Resumen</h4>
                         <hr>
-                        <p>{map.property.summary}</p>
+                        <div>{map.property.summary}</div>
                     </div>
                 </div>
                 <div class="col-lg-4">
