--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,14 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Romsal, SRL</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
     <link rel="stylesheet" href="/assets/css/about.css?h=a09c004c68bf879cc04231cc1b6edf4b">
     <link rel="stylesheet" href="/assets/css/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
-    <link rel="stylesheet" href="/assets/css/generic/cards.css?h=af3c9829d7af4e470da371f955c81b1d">
+    <link rel="stylesheet" href="/assets/css/generic/cards.css?h=1c3e401e4421d22b1619648447ba6a51">
     <link rel="stylesheet" href="/assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
     <link rel="stylesheet" href="/assets/css/generic/general.css?h=a7957f698ea1f4e9b33d41f9c0b2e442">
     <link rel="stylesheet" href="/assets/css/generic/highlight.css?h=de10cb38c5475825bbac2117f770edd0">
@@ -80,7 +78,7 @@
                     <div class="col my-2" data-bss-hover-animate="pulse">
                         <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Maria%20Alejandra.png?h=710b82dd593ed1d12ce7fe9b307a785d">
                             <h3 class="mt-4 fw-bold"><strong>María Romano</strong></h3><span class="text-uppercase title fw-bold">ENCARGADA DE VENTAS</span>
-                            <div class="social my-2"><a class="text-decoration-none" href="mailto:Maria.romano.salas@gmail.com"><i class="material-icons d-block">mail_outline</i>maria.romano.salas@gmail.com</a></div>
+                            <div class="social my-2"><a class="text-decoration-none" href="mailto:maria.romano.salas@gmail.com"><i class="material-icons d-block">mail_outline</i>maria.romano.salas@gmail.com</a></div>
                         </div>
                     </div>
                     <div class="col my-2" data-bss-hover-animate="pulse">
@@ -94,10 +92,10 @@
         </section><!-- End: Team Boxed -->
     </main>
     <footer>{#include footer/}</footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="/assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
 </body>
 
 </html>
