--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Romsal, SRL</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css?h=28fcdefe8a87593f1f43b7d9951e0cba">
     <link rel="stylesheet" href="/assets/css/custom-colors.compiled.css?h=c56b082155acdada91dfdcb9dcf23b85">
-    <link rel="stylesheet" href="/assets/css/generic/cards.css?h=af3c9829d7af4e470da371f955c81b1d">
+    <link rel="stylesheet" href="/assets/css/generic/cards.css?h=1c3e401e4421d22b1619648447ba6a51">
     <link rel="stylesheet" href="/assets/css/generic/fields.css?h=a3fd52f6785712ad3201dc899f0c34be">
     <link rel="stylesheet" href="/assets/css/generic/general.css?h=a7957f698ea1f4e9b33d41f9c0b2e442">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -20,20 +18,22 @@
 </head>
 
 <body>
-    <header></header>
+    <header>{#include navbar/}</header>
     <main>
-        <div class="container text-center d-flex align-items-center vh-100" style="max-width: 500px;">
-            <div><img class="mb-5" src="/assets/img/404.png?h=1d582e7483a0806cd75b8e30c24e439d" width="50%">
-                <h2>Página no encontrada<br></h2>
-                <p>Ooops...&nbsp;Es&nbsp;posible&nbsp;que&nbsp;la&nbsp;página&nbsp;que&nbsp;está&nbsp;buscando haya sido eliminada o se&nbsp;cambió&nbsp;el&nbsp;nombre&nbsp;o, no&nbsp;está&nbsp;disponible&nbsp;temporalmente.<br></p><a class="btn btn-primary text-uppercase mt-3" role="button" href="/index.html" style="font-family: ABeeZee, sans-serif;">Ir&nbsp;a la página&nbsp;de&nbsp;inicio<br></a>
+        <div class="bg-light">
+            <div class="container text-center d-flex align-items-center p-5" style="max-width: 500px;">
+                <div><img class="mb-5" src="/assets/img/404.png" width="50%" />
+                    <h2>Página no encontrada<br /></h2>
+                    <p>Ooops... Es posible que la página que está buscando haya sido eliminada o se cambió el nombre o, no está disponible temporalmente.<br /></p><a class="btn btn-primary text-uppercase mt-3" role="button" href="index.html" style="font-family: ABeeZee, sans-serif;">Ir a la página de inicio<br /></a>
+                </div>
             </div>
         </div>
     </main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <footer>{#include footer/}</footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="/assets/js/formatter/currency.js?h=c473d08532b05fe5816ebe43c24db8a0"></script>
 </body>
 
 </html>
