--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -7,24 +7,12 @@
                     <blockquote class="blockquote">
                         <p class="text-white-50">Te acompañamos en este viaje, de principio a fin:</p>
                     </blockquote>
-                    <figcaption class="blockquote-footer text-white"><small class="text-white-50 d-block">Santiago de
-                            los Caballeros</small><small class="text-white-50 d-block">C/ Parada Vieja, Res. María
-                            Alejandra I 2do Nivel</small><small class="text-white-50 d-block">Tel: (809)
-                            820-0897</small><small class="text-white-50 d-block">E-Mail: contacto@romsal.com.do</small>
-                    </figcaption>
+                    <figcaption class="blockquote-footer text-white"><small class="text-white-50 d-block">Santiago de los Caballeros</small><small class="text-white-50 d-block">C/ Parada Vieja, Res. María Alejandra I 2do Nivel</small><small class="text-white-50 d-block">Tel: (809) 820-0897</small><small class="text-white-50 d-block">E-Mail: contacto@romsal.com.do</small></figcaption>
                 </figure>
             </div>
-            <div class="col text-center d-flex flex-column justify-content-center align-items-center"
-                style="border-right: 1px solid var(--bs-light);border-left: 1px solid var(--bs-light);border-radius: 20px;">
+            <div class="col text-center d-flex flex-column justify-content-center align-items-center" style="border-right: 1px solid var(--bs-light);border-left: 1px solid var(--bs-light);border-radius: 20px;">
                 <h5 class="text-uppercase text-white-50 my-4 fw-bold">Síguenos en las redes</h5>
-                <div><a class="border rounded-circle d-inline-block m-2 p-2" href="https://api.whatsapp.com/send?phone=+18296593040" style="width: 50px;height: 50px;"
-                        target="_blank"><i class="fab fa-whatsapp social-icon" style="color: var(--bs-teal);"></i></a><a
-                        class="border rounded-circle d-inline-block m-2 p-2" href="https://www.instagram.com/romsalsrl" style="width: 50px;height: 50px;"
-                        target="_blank"><i class="fab fa-instagram social-icon"
-                            style="color: var(--bs-pink);"></i></a><a
-                        class="border rounded-circle d-inline-block m-2 p-2" href="https://www.facebook.com/constructoraromsal" style="width: 50px;height: 50px;"
-                        target="_blank"><i class="fab fa-facebook-f social-icon" style="color: var(--bs-blue);"></i></a>
-                </div>
+                <div><a class="border rounded-circle d-inline-block m-2 p-2" href="https://api.whatsapp.com/send?phone=+18296593040" style="width: 50px;height: 50px;" target="_blank"><i class="fab fa-whatsapp text-white-50 social-icon"></i></a><a class="border rounded-circle d-inline-block m-2 p-2" href="https://www.instagram.com/romsalsrl" style="width: 50px;height: 50px;" target="_blank"><i class="fab fa-instagram text-white-50 social-icon"></i></a><a class="border rounded-circle d-inline-block m-2 p-2" href="https://www.facebook.com/constructoraromsal" style="width: 50px;height: 50px;" target="_blank"><i class="fab fa-facebook-f text-white-50 social-icon"></i></a></div>
             </div>
             <div class="col">
                 <nav class="navbar navbar-dark text-center h-100">
