--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header>{#include navbar/}</header>
     <main>
         <section class="highlight">
             <div class="container">
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="col-auto ms-auto">
                             <div class="dropdown"><a class="btn dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" role="button">Orden por defecto</a>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                <div class="dropdown-menu"><a class="dropdown-item" href="#">Orden por defecto</a></div>
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                                     <div class="card textwhite text-white m-0 overflow-hidden"><a class="stretched-link" href="#"></a>
                                         <div class="carousel slide" data-bs-ride="carousel" id="carousel-id">
                                             <div class="carousel-inner">
-                                                <div class="carousel-item active"><img class="w-100 d-block" alt="Slide Image"></div>
+                                                <div class="carousel-item active"><img class="w-100 d-block" alt="Slide Image" src="/assets/img/no-media.jpg?h=9786fe98a947dad2fb12fdd8d457ac40"></div>
                                             </div>
                                             <div>
                                                 <!-- Start: Previous --><a class="carousel-control-prev" href="#carousel-id" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><!-- End: Previous -->
@@ -106,7 +106,7 @@
                     <form>
                         <div class="row gy-3">
                             <div class="col-12">
-                                <div class="input-group"><input class="form-control custom-floating" type="text" placeholder="Sector o dirección" name="address"><span class="input-group-text bg-white"><i class="material-icons">my_location</i></span></div>
+                                <div class="input-group"><input class="form-control custom-floating" type="text" id="address" placeholder="Sector o dirección" name="address"><span class="input-group-text bg-white"><i class="material-icons">my_location</i></span></div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating"><select class="form-select" id="type" name="type">
@@ -116,10 +116,10 @@
                                     </select><label class="form-label" for="type">Tipo de inmobiliario</label></div>
                             </div>
                             <div class="col-12 col-lg-6">
-                                <div class="form-floating"><input class="form-control" type="number" id="bath" placeholder="Baños" name="bath" min="0" max="100"><label class="form-label" for="bath">Baños</label></div>
+                                <div class="form-floating"><input class="form-control" type="number" id="room" placeholder="Habitaciones" name="room" max="100" min="0"><label class="form-label" for="room">Habitaciones</label></div>
                             </div>
                             <div class="col-12 col-lg-6">
-                                <div class="form-floating"><input class="form-control" type="number" id="room" placeholder="Habitaciones" name="room" max="100" min="0"><label class="form-label" for="room">Habitaciones</label></div>
+                                <div class="form-floating"><input class="form-control" type="number" id="bath" placeholder="Baños" name="bath" min="0" max="100"><label class="form-label" for="bath">Baños</label></div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating"><select class="form-select" id="category" name="category">
@@ -144,12 +144,12 @@
             </div>
         </div><!-- End: Sidebar -->
     </main>
-    <footer></footer>
+    <footer>{#include footer/}</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="/assets/js/search.js?h=4dd05e0398d01df7de564b4d25ba7c30"></script>
+    <script src="/assets/js/search.js?h=2e2bd9ffc4503e0628b258d9e50787e0"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 </body>
 
